%% title: ERD 03b - Invoice / Payment / MA Renewal / MA Ticket
%% Module: Project / Customer / Finance (part 2 of 2, see erd-03a-customer-contract-project.mmd for customer/contract/project/delivery)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PM_INVOICE {
        UUID id
        UUID business_id
        varchar invoice_no
        UUID customer_id
        UUID project_id
        UUID contract_id
        UUID delivery_id
        UUID milestone_id
        BillingType billing_type
        date issue_date
        date due_date
        decimal subtotal_amount
        decimal vat_rate
        decimal vat_amount
        decimal total_amount
        decimal paid_amount
        PaymentStatus payment_status
        varchar approval_status
        text receipt_file_ref
        text remark
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_INVOICE_ITEM {
        UUID id
        UUID invoice_id
        varchar item_name
        text description
        decimal amount
        int sort_order
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_PAYMENT {
        UUID id
        UUID business_id
        varchar payment_no
        UUID invoice_id
        date payment_date
        PaymentMethod payment_method
        decimal amount
        varchar reference_no
        varchar bank_name
        text receipt_file
        PaymentStatus payment_status
        text notes
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_MA_RENEWAL {
        UUID id
        UUID business_id
        varchar renewal_no
        UUID contract_id
        UUID customer_id
        UUID project_id
        date current_end_date
        date new_start_date
        date new_end_date
        decimal proposed_amount
        MaRenewalStatus status
        UUID new_contract_id
        text remark
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_MA_TICKET {
        UUID id
        UUID business_id
        varchar ticket_no
        UUID customer_id
        UUID project_id
        UUID contract_id
        MaTicketType ticket_type
        varchar title
        text description
        MaTicketSeverity severity
        MaTicketStatus status
        varchar assigned_to
        varchar reported_by
        timestamp reported_date
        timestamp target_response_date
        timestamp target_resolve_date
        timestamp resolved_date
        timestamp closed_date
        date start_date
        varchar start_time
        date end_date
        varchar end_time
        text resolution_summary
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_MA_TICKET_ASSIGNEE {
        UUID id
        UUID business_id
        UUID ma_ticket_id
        varchar user_id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    %% ===== Relationships =====

    PM_INVOICE ||--o{ PM_INVOICE_ITEM : "line items"
    PM_INVOICE ||--o{ PM_PAYMENT : "receives payments"

    PM_MA_TICKET ||--o{ PM_MA_TICKET_ASSIGNEE : "assigned to"

